--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@capacitor/google-maps": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/splash-screen": "^4.1.0",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.15",
+    "cordova-res": "0.15.4",
     "ngx-star-rating": "^2.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
