--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/pdf-generator": "^6.2.0",
     "@capacitor/android": "^4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.0.1",
@@ -30,8 +31,8 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.15",
+    "cordova-pdf-generator": "^2.1.1",
     "cordova-res": "0.15.4",
-    "ngx-star-rating": "^2.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
