--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,12 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.rtechi.allpawarmi",
 	"appName": "Allpa Warmi",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"plugins":{
+		"PushNotifications":{
+			"presentationOptions": ["badge","sound","alert"]
+		}
+	},
+	"cordova":{}
 }
