--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@awesome-cordova-plugins/pdf-generator": "^6.2.0",
     "@capacitor/android": "^4.3.0",
     "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.0.1",
+    "@capacitor/core": "^4.0.1",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/google-maps": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
@@ -33,6 +33,7 @@
     "@ionic/lab": "^3.2.15",
     "cordova-pdf-generator": "^2.1.1",
     "cordova-res": "0.15.4",
+    "ngx-stars": "^1.6.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -47,7 +48,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "4.0.1",
+    "@capacitor/cli": "^4.0.1",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
