--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,12 +1,16 @@
 {
-	"appId": "com.rtechi.allpawarmi",
-	"appName": "Allpa Warmi",
-	"webDir": "www",
-	"bundledWebRuntime": false,
-	"plugins":{
-		"PushNotifications":{
-			"presentationOptions": ["badge","sound","alert"]
-		}
-	},
-	"cordova":{}
+  "appId": "com.rtechi.allpawarmi",
+  "appName": "Allpa Warmi",
+  "webDir": "www",
+  "bundledWebRuntime": false,
+  "plugins": {
+    "PushNotifications": {
+      "presentationOptions": [
+        "badge",
+        "sound",
+        "alert"
+      ]
+    }
+  },
+  "cordova": {}
 }
