--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/google-maps": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/push-notifications": "^4.1.1",
     "@capacitor/splash-screen": "^4.1.0",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
